feature: API auth
